restructure code; only create file listeners for new files; only open editor tabs with the corresponding action; fix edit action; add view action